~ sphinx doc action

--- a/.github/workflows/sphinx-documentation.yml
+++ b/.github/workflows/sphinx-documentation.yml
@@ -1,7 +1,11 @@
 name: "Pull Request Docs Check"
-on: 
-- pull_request
 
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+    
 jobs:
   docs:
     runs-on: ubuntu-latest
