--- a/.github/workflows/sphinx-documentation.yml
+++ b/.github/workflows/sphinx-documentation.yml
@@ -5,12 +5,32 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+
 jobs:
   docs:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: ammaraskar/sphinx-action@master
+    - uses: actions/checkout@v2
+    - name: Install datablend dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements.txt
+
+    - name: Install Datablend
+      run: |
+        python -m pip install .
+
+    - name: Install Sphinx dependencies
+      run: |
+        python -m pip install sphinx
+        python -m pip install sphinx-gallery
+        python -m pip install sphinx-rtd-theme
+
+    - name: Generate Sphinx documentation
+      run: |
+        cd docs
+        make html
+    - uses: actions/upload-artifact@v1
       with:
-        docs-folder: "docs/"
+        name: SphinxDocumentationHTML
+        path: docs/_build/html/
