--- a/.github/workflows/sphinx-documentation.yml
+++ b/.github/workflows/sphinx-documentation.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+
     - name: Install datablend dependencies
       run: |
         python -m pip install --upgrade pip
