--- a/.github/workflows/sphinx-documentation.yml
+++ b/.github/workflows/sphinx-documentation.yml
@@ -27,6 +27,7 @@ jobs:
 
     - name: Install Sphinx dependencies
       run: |
+        python -m pip install matplotlib
         python -m pip install sphinx
         python -m pip install sphinx-gallery
         python -m pip install sphinx-rtd-theme
