--- a/.github/workflows/sphinx-documentation.yml
+++ b/.github/workflows/sphinx-documentation.yml
@@ -1,16 +1,39 @@
-name: "Pull Request Docs Check"
+name: "Build Sphinx Documentation"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, gh-pages ]
   pull_request:
-    branches: [ main ]
-    
+    branches: [ main, gh-pages ]
+
 jobs:
   docs:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: ammaraskar/sphinx-action@master
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        docs-folder: "docs/"
+        python-version: 3.7
+
+    - name: Install datablend dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements.txt
+    - name: Install Datablend
+      run: |
+        python -m pip install .
+    - name: Install Sphinx dependencies
+      run: |
+        python -m pip install matplotlib
+        python -m pip install sphinx
+        python -m pip install sphinx-gallery
+        python -m pip install sphinx-rtd-theme
+    - name: Generate Sphinx documentation
+      run: |
+        cd docs
+        make html
+    - uses: actions/upload-artifact@v1
+      with:
+        name: SphinxDocumentationHTML
+        path: docs/_build/html/
