--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,6 +14,13 @@ help:
 
 .PHONY: help Makefile
 
+# This is to create the documentation using html and moving it to
+# the documentation branch (gh-pages). Note that this could also be
+# implemented by changing the BUILDDIR variable.
+github:
+	@make html
+	@cp -a _build/html/. ../../gh-pages/docs
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
