--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-attrs==20.3.0
-importlib-metadata==3.3.0
-iniconfig==1.1.1
-numpy==1.19.4
-packaging==20.8
+numpy
 pandas
-pluggy==0.13.1
-py==1.10.0
-pyparsing==2.4.7
-pytest==6.2.1
-python-dateutil==2.8.1
-pytz==2020.5
-PyYAML==5.3.1
-six==1.15.0
-toml==0.10.2
-typing-extensions==3.7.4.3
-zipp==3.4.0
+pytest
+pytest-cov
+PyYAML
+xlrd
+xlsxwriter
+openpyxl
+matplotlib
